<resources>

    <string name="app_name">Perritos felices</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login__sign_in">Inicio de sesion</string>
    <string name="login__welcome_message">Bienvenido a Perritos felices ¿Cómo desea iniciar?</string>
    <string name="login__email_hint">Correo electrónico</string>
    <string name="login__password_hint">Contraseña</string>
    <string name="login__password_forgotten">¿Olvídaste tu contraseña?</string>
    <string name="login__login_button">Iniciar sesión</string>
    <string name="login__signup_invitation">¿Aún no tienes una cuenta?</string>
    <string name="login__signup_button">Regístrate</string>
    <string name="login__walker">Paseador</string>
    <string name="login__owner">Dueño</string>
    <string name="login__error_email_empty">Ingrese su correo electrónico</string>
    <string name="login__error_password_empty">Ingrese su contraseña</string>
    <string name="login__error_user_not_exists">No existe un usuario registrado con este correo electrónico</string>
    <string name="login__error_wrong_password">Credenciales incorrectas</string>
    <string name="login__error_no_user_type">No estas registrado en esta categoría</string>
    <string name="login__error_email_not_verified">Verifica tu correo electrónico para continuar</string>
    <string name="login__error_bad_email">Ingrese un correo electrónico válido</string>
    <string name="login__error_unknown">Oops, algo salió mal intente de nuevo más tarde</string>

    <string name="signup__header">Crea tu cuenta</string>
    <string name="signup__name_hint">Nombre completo</string>
    <string name="signup__email_hint">Correo electrónico</string>
    <string name="signup__password_hint">Contraseña</string>
    <string name="signup__conf_password_hint">Confirma tu contraseña</string>
    <string name="signup__mode_disclaimer">¿Cómo que tipo de usuario deseas registrarte?</string>
    <string name="signup__signup_button">Registrarme</string>
    <string name="signup__login_invitation">¿Ya tienes una cuenta?</string>
    <string name="signup__login_button">Inicia sesión</string>
    <string name="signup__error_name_empty">Ingresa tu nombre para continuar</string>
    <string name="signup__error_email_empty">Ingresa tu email para continuar</string>
    <string name="signup__error_password_empty">Ingresa tu contraseña para continuar</string>
    <string name="signup__error_user_already_exists">Ya existe un usuario registrado con este correo electrónico</string>
    <string name="signup__error_unknown">Oops, algo salió mal intente de nuevo más tarde</string>
    <string name="signup__error_email_invalid">Ingrese un correo electrónico válido para continuar</string>
    <string name="signup__error_passwords_not_match">Las contraseñas deben coincidir para continuar</string>
    <string name="signup__error_password_insecure">La contraseña debe tener al menos 6 caracteres</string>

    <string name="content_description">content</string>

    <string name="animation__owner">https://assets7.lottiefiles.com/packages/lf20_nobbjtyh.json</string>
    <string name="animation__dog_walking">https://assets7.lottiefiles.com/packages/lf20_2ixzdfvy.json</string>

    <string name="forgot_password__header">Recuperar contraseña</string>
    <string name="forgot_password__question">¿Necesitas recuperar tu contraseña?</string>
    <string name="forgot_password__instructions">No te preocupes, ingresa tu correo electronico y te enviaremos una liga para recuperarla</string>
    <string name="forgot_password__recover_button">Recuperar contraseña</string>
    <string name="forgot_password__email_sent">Hemos enviado un correo para que recuperes tu contraseña</string>
    <string name="forgot_password__general_error">No hemos podido encontrar tu correo electrónico</string>
    <string name="forgot_password__empty_email_error">Ingrese su correo electrónico para continuar</string>
    <string name="forgot_password__bad_email_error">Ingrese un correo electrónico válido</string>
    <string name="forgot_password__unknown_error">Oops, algo salió mal intente de nuevo más tarde</string>

    <string name="email_verification__header">Verifica tu email</string>
    <string name="email_verification__go_sign_in_button">Iniciar sesión</string>
    <string name="email_verification__link_sent">Correo electrónico reenviado</string>
    <string name="email_verification__title">¡Ya casi estás ahí %1$s!</string>
    <string name="email_verification__instructions">Hemos enviado una liga a tu correo electrónico para verificar tu identidad,
        no olvides revisar tu bandeja de correo no deseado.</string>
    <string name="email_verification__help_disclaimer">¿No recibiste el correo electrónico?</string>
    <string name="email_verification__send_link">Reenviar enlace</string>
    <string name="email_verification__resend_counter">Reenviar enlace (00:0%1$s)</string>

    <string name="owner__bottom_menu_walks">Mis paseos</string>
    <string name="owner__bottom_menu_pets">Mis perritos</string>

    <string name="owner_pets__pets_header">Tus perritos</string>
    <string name="owner_pets__pets_empty">Los perritos que agregues a tu cuenta aparecerán en esta sección</string>

    <string name="owner_pets__new_pet_header">Agregar perrito</string>
    <string name="owner_pets__new_pet_name_hint">Nombre</string>
    <string name="owner_pets__new_pet_weight_hint">Peso (kg)</string>
    <string name="owner_pets__new_pet_age_hint">Edad (años)</string>
    <string name="owner_pets__new_pet_race_hint">Raza</string>
    <string name="owner_pets__new_pet_save_button">Guardar</string>
    <string name="owner_pets__new_pet_success">Perrito guardado correctamente</string>
    <string name="owner_pets__new_pet_fill_data">Rellene todos los campos para continuar</string>

    <string name="owner_update_pet__header">Actualizar perrito</string>
    <string name="owner_update_pet__update_button">Actualizar</string>
    <string name="owner_update_pet__delete_button">Eliminar</string>
    <string name="owner_update_pet__delete_warning">¿Esta seguro? Si elimina este perrito se perderá todo registro de él</string>
    <string name="owner_update_pet__delete_success">Perrito eliminado correctamente</string>

    <string name="owner_walks__header">Tus paseos</string>
    <string name="owner_walks__walks_open">Paseos abiertos</string>
    <string name="owner_walks__walks_done">Paseos pasados</string>
    <string name="owner_walks__walks_scheduled">Paseos programados</string>
    <string name="owner_walks__no_walks">Opps, parece que no tienes paseos registrados aún</string>
    <string name="owner_walks__select_active">Paseos abiertos</string>
    <string name="owner_walks__select_past">Paseos anteriores</string>
    <string name="owner_walks__select_accepted">Paseos programados</string>
    <string name="owner_walks__select_type">Seleccione un filtro</string>
    <string name="owner_walks__delete_warining">¿Esta seguro? Esta por eliminar definitivamente este paseo</string>
    <string name="owner_walks__date_overdue">Fecha vencida</string>

    <string name="owner_new_walk__header">Solicitar un paseo</string>
    <string name="owner_new_walk__general_data">Datos generales</string>
    <string name="owner_new_walk__select_pet">Seleccione su perrito</string>
    <string name="owner_new_walk__select_pet_hint">Perrito</string>
    <string name="owner_new_walk__comments_hint">Comentarios adicionales…</string>
    <string name="owner_new_walk__date_label">Fecha</string>
    <string name="owner_new_walk__time_label">Hora</string>
    <string name="owner_new_walk__walk_time">Duración del paseo</string>
    <string name="owner_new_walk__set_date_button">Seleccionar dia</string>
    <string name="owner_new_walk__set_time_button">Seleccionar hora</string>
    <string name="owner_new_walk__get_walk_button">Publicar</string>
    <string name="owner_new_walk__select_date">Dia del paseo</string>
    <string name="owner_new_walk__select_time">Hora del paseo</string>
    <string name="owner_new_walk__select_data">Seleccione el dia y la mascota para publicar el paseo</string>
    <string name="owner_new_walk__select_data_error">El dia del paseo es inválido, seleccione otro para continuar</string>
    <string name="owner_new_walk__publish_success">Paseo publicado correctamente</string>


    <string name="owner_see_walk__header">Paseo pasado</string>
    <string name="owner_see_walk__walker_label">Paseo realizado por: </string>

    <string name="owner_scheduled_walk__header">Paseo programado</string>
    <string name="owner_scheduled_walk__walker_label">El paseo será realizado por: </string>

    <string name="walker__bottom_menu_search">Buscar paseos</string>
    <string name="walker__bottom_menu_walks">Mis paseos</string>

    <string name="walker_search__header">Paseos disponibles</string>
    <string name="walker_search__instructions">Seleccione un paseo de la lista para conocer sus detalles:</string>
    <string name="walker_search__item_walk">Ver</string>
    <string name="walker_search__date_overdue">Fecha vencida</string>
    <string name="walker_search__date_overdue_disclaimer">La fecha de este paseo ha vencido</string>
    <string name="walker_search__no_walks">Oops, parece que no hay paseos registrados aún</string>
    <string name="walker_search__log_out_warining">¿Esta seguro? Esta por cerrar su sesión actual</string>

    <string name="walker_walk__header">Ver paseo</string>
    <string name="walker_walk__header_finish">Terminar paseo</string>
    <string name="walker_walk__accept_walk_button">Aceptar paseo</string>
    <string name="walker_walk__finish_walk_button">Terminar paseo</string>
    <string name="walker_walk__duration">Duración</string>
    <string name="walker_walk__owner">Dueño</string>
    <string name="walker_walk__date">Fecha</string>
    <string name="walker_walk__age_placeholder">%1$s años</string>
    <string name="walker_walk__comments">Comentarios</string>
    <string name="walker_walk__no_comments">Sin comentarios</string>
    <string name="walker_walk__walk_accepted">Paseo aceptado correctamente</string>
    <string name="walker_walk__walk_finish">Paseo finalizado correctamente</string>

    <string name="walker_walks__header">Tus paseos</string>

    <string name="read_storage_permission_denied">Oops, parece que no aceptaste los permisos necesarios. Puedes hacerlo desde configuración.</string>
    <string name="image_selection_failed">Oops, parece que algo salió mal.</string>

    <string name="errors__general_error">>Oops, algo salió mal intente de nuevo más tarde</string>
    <string name="ok">Si</string>
    <string name="cancel">Cancelar</string>
    <string name="base_fragment__pick_date_title">Selecciona la hora del paseo</string>
</resources>