<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".owner.ui.walks.new_walk.OwnerNewWalkFragment">

    <LinearLayout
        android:id="@+id/llToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/owner_new_walk__header"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/color_border" />

    </LinearLayout>

    <ImageView
        android:id="@+id/mbBack"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/asset_ripple_circle"
        android:contentDescription="@string/content_description"
        android:scaleType="fitXY"
        android:src="@drawable/ic_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?android:attr/textColorPrimary" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/llToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvGeneralData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/owner_new_walk__general_data"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSelectPet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/owner_new_walk__select_pet"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvGeneralData" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSelectPet"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/owner_new_walk__select_pet_hint"
                android:textColorHint="@color/color_secondary"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSelectPet">

                <AutoCompleteTextView
                    android:id="@+id/etPet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:padding="16dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/owner_new_walk__date_label"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tilSelectPet"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/mbSetDate"
                app:layout_constraintBottom_toBottomOf="@id/mbSetDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/mbSetDate"
                tools:text="Sab 7, Septiembre" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbSetDate"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginHorizontal="16dp"
                android:paddingVertical="16dp"
                android:text="@string/owner_new_walk__set_date_button"
                app:cornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvDate"
                app:layout_constraintTop_toBottomOf="@+id/tvDateLabel" />

            <TextView
                android:id="@+id/tvTimeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/owner_new_walk__time_label"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/mbSetDate"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilComments"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/owner_new_walk__comments_hint"
                app:hintTextColor="@color/color_secondary"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mbSetTime">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etComments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:gravity="top"
                    android:lines="3"
                    android:padding="16dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/tvDate"
                app:layout_constraintBottom_toBottomOf="@id/mbSetTime"
                app:layout_constraintStart_toStartOf="@+id/tvDate"
                app:layout_constraintTop_toTopOf="@+id/mbSetTime"
                tools:text="12:00 AM" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbSetTime"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginHorizontal="16dp"
                android:paddingVertical="16dp"
                android:text="@string/owner_new_walk__set_time_button"
                app:cornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="@+id/mbSetDate"
                app:layout_constraintStart_toStartOf="@+id/mbSetDate"
                app:layout_constraintTop_toBottomOf="@+id/tvTimeLabel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbSaveWalk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="32dp"
                android:backgroundTint="@color/yellow"
                android:paddingVertical="16dp"
                android:text="@string/owner_new_walk__get_walk_button"
                android:textColor="@android:color/white"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilComments"
                app:layout_constraintVertical_bias="0"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>