<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.ui.EmailVerificationFragment">

    <LinearLayout
        android:id="@+id/llToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/email_verification__header"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/color_border"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/mbBack"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/content_description"
        android:scaleType="fitXY"
        android:src="@drawable/ic_back"
        android:background="@drawable/asset_ripple_circle"
        app:tint="?android:attr/textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/avEmailVerification"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="24dp"
        app:lottie_rawRes="@raw/licking_dog"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:visibility="visible"
        android:animateLayoutChanges="true"
        tools:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llToolbar"
        app:layout_constraintVertical_bias="0"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email_verification__title"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/avEmailVerification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:text="@string/email_verification__instructions"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbResend"
        style="@style/Theme.AristiComp.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:paddingVertical="16dp"
        android:text="@string/email_verification__send_link"
        android:textColor="@android:color/white"
        app:cornerRadius="20dp"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInstructions" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/pbResend"
        style="@style/Theme.AristiComp.CircularProgressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/mbResend"
        app:layout_constraintEnd_toEndOf="@id/mbResend"
        app:layout_constraintStart_toStartOf="@id/mbResend"
        app:layout_constraintTop_toTopOf="@id/mbResend" />



</androidx.constraintlayout.widget.ConstraintLayout>